--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  url_launcher: 5.1.3
+  url_launcher: ^5.2.7
   package_info: '>=0.4.3 <2.0.0'
   
 dev_dependencies:
